# kuiz

./: .gitignore  package-lock.json  vercel.json
Frontend/: components.json  index.html  package-lock.json  package.json  vite.config.js
Frontend/src/: App.jsx  index.css
Frontend/src/Apicall/: create.js
Frontend/src/components/: Otp.jsx  Quizcreation.jsx  Select.jsx  Sign.jsx  p.jsx  q.jsx
Frontend/src/components/ui/: animated-theme-toggler.jsx  resizable-navbar.jsx  slider.jsx  sparkles-text.jsx
backend/Auth/: Cargo.toml
backend/Auth/src/: handler.rs  main.rs  route.rs
backend/QuizCreation/: Cargo.toml
backend/QuizCreation/src/: main.rs
backend/quiz/: index.js  package-lock.json  package.json
choice/: index.html  package-lock.json  script.js
loginpage/: index.html
src/choice/: package.json
src/loginpage/: index.html  output.css  package.json
src/loginpage/choice/: index.html  output.css  package.json
