[package]
name = "Auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
chrono = "0.4.42"
dotenv = "0.15.0"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
lettre = "0.11.19"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
surrealdb = "2.3.10"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }

