[package]
name = "QuizCreation"
version = "0.1.0"
edition = "2024"

[dependencies]
app-state = "0.1.0"
app-state-macros = "0.1.0"
axum = "0.8.4"
dotenv = "0.15.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
surrealdb = "2.3.10"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
